--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
   <body>
     <h1>Title 1</h1>
     <p>test</p>
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="js/oauth.js"></script>
+    <script src="js/microcms.js"></script>
   </body>
 </html>
