--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
+<html><script id="tinyhippos-injected">if (window.top.ripple) { window.top.ripple("bootstrap").inject(window, document); }</script><head>
   </head>
-  <body>
+  <body style="">
     <h1>Title 1</h1>
     <p>test</p>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="js/oauth.js"></script>
     <script src="js/microcms.js"></script>
-  </body>
-</html>
+  
+</body></html>
