updated via microcms

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html><script id="tinyhippos-injected">if (window.top.ripple) { window.top.ripple("bootstrap").inject(window, document); }</script><head>
   </head>
   <body style="">
-    <h1>Title 1</h1>
+    <h1>Title 2</h1>
     <p>test</p>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="js/oauth.js"></script>
     <script src="js/microcms.js"></script>
   
-</body></html>
+<div id="microcms_buttons" style="position: fixed; top: 0; right:0"><button id="microcms_edit">Edit</button><button id="microcms_close">Close</button><button id="microcms_save" style="display: inline-block;">Save</button></div></body></html>
