updated via microcms

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><script id="tinyhippos-injected">if (window.top.ripple) { window.top.ripple("bootstrap").inject(window, document); }</script><head>
   </head>
   <body style="">
-    <h1>Title 2</h1>
+    <h1>Title new</h1>
     <p>test</p>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="js/oauth.js"></script>
