updated via microcms

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<script id="tinyhippos-injected">if (window.top.ripple) { window.top.ripple("bootstrap").inject(window, document); }</script>
-  
-    <h1>Title 1 or 3</h1>
+<html><head></head>
+  <body style="">
+    <h1>Title 1 or 7</h1>
     <p>test</p>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="js/oauth.js"></script>
     <script src="js/microcms.js"></script>
-  
+  </body></html>
