--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html><head></head>
   <body style="">
-    <h1>Title 1 or 7</h1>
+    <h1>Title 1 or 2 or 3</h1>
     <p>test</p>
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="js/oauth.js"></script>
     <script src="js/microcms.js"></script>
   </body></html>
