--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head></head>
-  <body>
-    <h1>Title 1 or 2</h1>
+  <body style="">
+    <h1>My title</h1>
     <p>test</p>
     <script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="js/oauth.js"></script>
