--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head></head>
   <body style="">
-    <h1>My title</h1>
-    <p>test</p>
+    <h1>My new title</h1>
+    <p>test is cool</p>
     <script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="js/oauth.js"></script>
     <script src="js/microcms.js"></script>
