update cache manifest

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head></head>
+<html manifest="cache.manifest"><head></head>
   <body style="">
     <h1>My new title</h1>
     <p>test is cool</p>
