updated via microcms

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html manifest="cache.manifest"><head></head>
   <body style="">
     <h1>My new title</h1>
-    <p>testing is working</p>
+    <p>testing and testing</p>
     <script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="js/oauth.js"></script>
     <script src="js/microcms.js"></script>
