--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html><head></head>
   <body style="">
     <h1>My new title</h1>
-    <p>testing and testing again and again 999</p>
+    <p>testing 78787878</p>
     <script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
     <script src="js/oauth.js"></script>
+    <script src="js/github.js"></script>
     <script src="js/microcms.js"></script>
   </body></html>
