--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head></head>
   <body style="">
-    <h1>My new title here</h1>
-    <p>testing and test</p>
+    <h1>My new title</h1>
+    <p>testing again</p>
     <script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
     <script src="js/oauth.js"></script>
