updated via microcms

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html><head></head>
   <body style="">
     <h1>My new title&nbsp;</h1>
-    <p>testing and testing again and again 3</p>
+    <p>testing and testing again and again 5</p>
     <script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
     <script src="js/oauth.js"></script>
     <script src="js/github.js"></script>
     <script src="js/microcms.js"></script>
-  </body></html>
+  <div id="microcms_buttons" style="position: fixed; top: 0; right:0"><div id="spinner"></div><button id="microcms_edit">Edit</button><button id="microcms_close">Close</button><button id="microcms_save" style="display: none;">Save</button></div></body></html>
