--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 			My new title&nbsp;</h1>
 		<p>
 			testing and testing again and again 7</p>
+		<h3 style="color:blue;">
+			titre 2</h3>
+		<p>
+			dsdsdsd</p>
+		<p>
+			dfsdfsd</p>
 	</body>
 </html>
