Changed from GitHub Pages Editor extension

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <html>
-	<head>
-		<title></title>
-	</head>
-	<body style="">
-		<h1>
-			My new title&nbsp;</h1>
-		<p>
-			testing and testing again and again 7</p>
-		<h3 style="color:blue;">
-			titre 2</h3>
-		<p>
-			dsdsdsd</p>
-		<p>
-			dfsdfsd</p>
-	</body>
+<head>
+	<title></title>
+</head>
+<body>
+<h1>My new title 3</h1>
+
+<p>testing and testing again and again 7</p>
+
+<h3>titre 2</h3>
+
+<p>dsdsdsd</p>
+
+<p>dfsdfsd</p>
+</body>
 </html>
