Changed from GitHub Pages Editor extension

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title></title>
 </head>
 <body>
-<h1>My new title 3</h1>
+<h1>My new title &nbsp;démo</h1>
 
 <p>testing and testing again and again 7</p>
 
